# PythonWEB_HW7

WebHW08/: pyproject.toml
WebHW08/MongoDB/: models.py  quotes.json  search.py  seeds.py
WebHW08/RabbitMQ/: consumer.py  models.py  producer.py  seed.py
